<resources>
    <string name="app_name">BSApp</string>
    <string name="txt_public_type">需求类型</string>
    <string name="txt_public_phone">联系方式</string>
    <string name="txt_public_pay">所需酬劳</string>
    <string name="txt_public_endTime">结束时间</string>
    <string name="txt_public_time">1月1日</string>
    <string name="txt_btn_publish">发布</string>

    <string-array name="filter_name_arr">
        <item>原图</item>
        <item>怀旧</item>
        <item>灰度</item>
        <item>模糊</item>
        <item>卡通</item>
        <item>溶解</item>
        <item>朦胧</item>
        <item>锐化</item>
        <item>伽马线</item>
        <item>素描</item>
    </string-array>

    <string-array name="order_type_arr">
        <item>跑腿</item>
        <item>代拿</item>
        <item>拼车</item>
        <item>顺风车</item>
        <item>互换</item>
        <item>陪伴</item>
        <item>其他</item>
    </string-array>
    
    <string name="student_identify">学生认证：%1$s</string>
    <string name="phone_number">手机号码：%1$s</string>
    <string name="clear_cache">清理缓存：%1$s M</string>
</resources>
