<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:gravity="center"
    android:text="@string/txt_public_type"
    android:textColor="@android:color/black"
    android:textStyle="bold"
    android:textSize="18sp"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="40dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:spinnerMode="dropdown">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:text="@string/txt_public_phone"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />

<EditText
    android:id="@+id/edit_phone"
    android:maxLines="1"
    android:layout_marginRight="20dp"
    android:layout_width="0dp"
    android:layout_weight="2"
    android:layout_height="40dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:text="@string/txt_public_pay"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/edit_pay"
            android:maxLines="1"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:text="@string/txt_public_endTime"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/txt_timepicker"
            android:gravity="center"
            android:text="@string/txt_public_time"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_content"
        android:layout_margin="5dp"
        android:maxLines="5"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_publish"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/txt_btn_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>